@@ -1,3 +1,8 @@
+#####April 28th, 2015
+- Coded player death
+- Glitches Completely implemented:
+	- Invincibility glitch
+	- Permanent Bodies Glitch
 #####April 27th, 2015
 - Initial Commit
 - Added glitches:
